HDL ANT Deployment Package/retrieveUnpackaged/objects/Blood_Samples__c.object
<CustomObject>
    <description>Data upload has to be mapped to Salesforce.com ID and format should be Contact ID, Quantity,Received Date (mm/dd/yyyy)</description>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <label>Blood Samples</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Doctor_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Received_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sample ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>